--- a/src/main/resources/assets/fruitphone/lang/en_US.lang
+++ b/src/main/resources/assets/fruitphone/lang/en_US.lang
@@ -2,3 +2,48 @@ itemGroup.fruitphone=Fruit Phone
 
 item.fruitphone.handheld.name=Fruit Phone
 item.fruitphone.passive.name=Fruit Glass
+
+tooltip.fruitphone.color=Color: %s
+
+# Basic Colors
+fruitphone.color.2C2D2D=Elegant Tungsten
+fruitphone.color.322D44=Obsidian
+fruitphone.color.CDCDCD=Silver
+fruitphone.color.E1E1E1=Iron
+fruitphone.color.FFFFFF=White
+
+# Standard Colors
+fruitphone.color.B15573=Slate Red
+fruitphone.color.AC5596=Dull Pink
+fruitphone.color.8851AC=Lucious Lavender
+fruitphone.color.5557B1=Kinda Blue
+fruitphone.color.5589B1=Steel Blue
+fruitphone.color.55A9B1=Sea Green
+fruitphone.color.55AF90=Real Teal
+fruitphone.color.73B155=Cactus Green
+fruitphone.color.9CB055=Wasabi
+fruitphone.color.B8AA4D=Sulfur
+fruitphone.color.B18255=Cinnamon
+fruitphone.color.B17355=Wet Clay
+fruitphone.color.AF5454=Scarlet
+
+# Vibrant Colors
+fruitphone.color.FD004D=Cherry Red
+fruitphone.color.E300FF=Terrific Pink
+fruitphone.color.9C00FF=Vivid Violet
+fruitphone.color.1B1BEC=Really Blue
+fruitphone.color.0078FF=Cerulean
+fruitphone.color.00BAFF=Sky Blue
+fruitphone.color.09FF97=Brilliant Verdant
+fruitphone.color.8BFF00=Mean Green
+fruitphone.color.CCFE00=Electric Green
+fruitphone.color.F6E700=Mustard Yellow
+fruitphone.color.FEC501=Dandelion Yellow
+fruitphone.color.FF9C00=Sunset Orange
+fruitphone.color.FF5C00=Vibrant Vermillion
+
+# Specialty Colors
+fruitphone.color.EFC6BF=Rose Gold
+fruitphone.color.C9D2D2=Platinum
+fruitphone.color.B31E02=Sriracha Red
+fruitphone.color.258474=Ender Green
