Phone -> Pad, add a smaller Phone item, add optional mode, detect vanilla servers

--- a/src/main/resources/assets/fruitphone/lang/en_US.lang
+++ b/src/main/resources/assets/fruitphone/lang/en_US.lang
@@ -1,7 +1,10 @@
 itemGroup.fruitphone=Fruit Phone
 
-item.fruitphone.handheld.name=Fruit Phone
+item.fruitphone.handheld.name=Fruit Pad
+item.fruitphone.handheld_mini.name=Fruit Phone
 item.fruitphone.passive.name=Fruit Glass
+
+tile.fruitphone.reader=Fruit Book
 
 tooltip.fruitphone.color=Color: %s
 
