Beginning of info rendering, add ProbeData submodule, glasses render tweaks

--- a/src/main/resources/assets/fruitphone/lang/en_US.lang
+++ b/src/main/resources/assets/fruitphone/lang/en_US.lang
@@ -3,6 +3,9 @@ itemGroup.fruitphone=Fruit Phone
 item.fruitphone.handheld.name=Fruit Pad
 item.fruitphone.handheld_mini.name=Fruit Phone
 item.fruitphone.passive.name=Fruit Glass
+item.fruitphone.passive.hint=Does not use your helmet slot, right-click while holding to equip.
+item.fruitphone.remover.name=Power Drill
+item.fruitphone.remover.hint=Removes glasses.
 
 tile.fruitphone.reader=Fruit Book
 
