--- a/src/main/resources/assets/fruitphone/lang/en_US.lang
+++ b/src/main/resources/assets/fruitphone/lang/en_US.lang
@@ -5,7 +5,7 @@ item.fruitphone.handheld_mini.name=Fruit Phone
 item.fruitphone.passive.name=Fruit Glass
 item.fruitphone.passive.hint=Does not use your helmet slot, right-click while holding to equip.
 item.fruitphone.remover.name=Power Drill
-item.fruitphone.remover.hint=Removes glasses.
+item.fruitphone.remover.hint=Removes or configures glasses. Right-click to configure, sneak right-click to remove;
 
 tile.fruitphone.reader=Fruit Book
 
@@ -53,3 +53,32 @@ fruitphone.color.EFC6BF=Rose Gold
 fruitphone.color.C9D2D2=Platinum
 fruitphone.color.B31E02=Sriracha Red
 fruitphone.color.258474=Ender Green
+
+
+fruitphone.furnace.fuel=Fuel
+fruitphone.furnace.progress=Progress
+
+fruitphone.gui.snapToGuides=Snap to Guides
+fruitphone.gui.clampRegion=Clamp Region
+
+subtitles.fruitphone.drill=Drill whirrs
+
+fruitphone.gravity.north_west=North West
+fruitphone.gravity.north=North
+fruitphone.gravity.north_east=North East
+fruitphone.gravity.west=West
+fruitphone.gravity.center=Center
+fruitphone.gravity.east=East
+fruitphone.gravity.south_west=South West
+fruitphone.gravity.south=South
+fruitphone.gravity.south_east=South East
+
+fruitphone.gravity.egg.north_west=Lawful Good
+fruitphone.gravity.egg.north=Neutral Good
+fruitphone.gravity.egg.north_east=Chaotic Good
+fruitphone.gravity.egg.west=Lawful Neutral
+fruitphone.gravity.egg.center=Neutral
+fruitphone.gravity.egg.east=Chaotic Neutral
+fruitphone.gravity.egg.south_west=Lawful Evil
+fruitphone.gravity.egg.south=Neutral Evil
+fruitphone.gravity.egg.south_east=Chaotic Evil
