Finish implementing glasses config GUI \o/

--- a/src/main/resources/assets/fruitphone/lang/en_US.lang
+++ b/src/main/resources/assets/fruitphone/lang/en_US.lang
@@ -60,6 +60,7 @@ fruitphone.furnace.progress=Progress
 
 fruitphone.gui.snapToGuides=Snap to Guides
 fruitphone.gui.clampRegion=Clamp Region
+fruitphone.gui.restoreDefaults=Restore Defaults
 
 subtitles.fruitphone.drill=Drill whirrs
 
