Finish Waila shim, select portrait mode based on scale instead of aspect

--- a/src/main/resources/assets/fruitphone/lang/en_US.lang
+++ b/src/main/resources/assets/fruitphone/lang/en_US.lang
@@ -61,6 +61,7 @@ fruitphone.furnace.progress=Progress
 fruitphone.gui.snapToGuides=Snap to Guides
 fruitphone.gui.clampRegion=Clamp Region
 fruitphone.gui.restoreDefaults=Restore Defaults
+fruitphone.wailaError=<Waila Error>
 
 subtitles.fruitphone.drill=Drill whirrs
 
