--- a/src/main/resources/assets/fruitphone/lang/en_US.lang
+++ b/src/main/resources/assets/fruitphone/lang/en_US.lang
@@ -12,6 +12,7 @@ tile.fruitphone.reader=Fruit Book
 tooltip.fruitphone.color=Color: %s
 
 # Basic Colors
+fruitphone.color.000000=Black
 fruitphone.color.2C2D2D=Elegant Tungsten
 fruitphone.color.322D44=Obsidian
 fruitphone.color.CDCDCD=Silver
@@ -40,7 +41,7 @@ fruitphone.color.9C00FF=Vivid Violet
 fruitphone.color.1B1BEC=Really Blue
 fruitphone.color.0078FF=Cerulean
 fruitphone.color.00BAFF=Sky Blue
-fruitphone.color.09FF97=Brilliant Verdant
+fruitphone.color.00FFCC=Brilliant Verdant
 fruitphone.color.8BFF00=Mean Green
 fruitphone.color.CCFE00=Electric Green
 fruitphone.color.F6E700=Mustard Yellow
@@ -54,9 +55,58 @@ fruitphone.color.C9D2D2=Platinum
 fruitphone.color.B31E02=Sriracha Red
 fruitphone.color.258474=Ender Green
 
+# Unobtainable Colors (except through NBT editing)
+fruitphone.color.FF0000=Programmer Red 
+fruitphone.color.00FF00=Programmer Green
+fruitphone.color.00FFFF=Programmer Cyan
+fruitphone.color.FF00FF=Programmer Purple
+fruitphone.color.0000FF=Programmer Blue
+fruitphone.color.FFFF00=Programmer Yellow
+
 
 fruitphone.furnace.fuel=Fuel
 fruitphone.furnace.progress=Progress
+
+fruitphone.jukebox.noRecord=Empty
+
+fruitphone.note=Note: %s
+fruitphone.note.0=1 F#
+fruitphone.note.1=1 G
+fruitphone.note.2=1 G#
+fruitphone.note.3=1 A
+fruitphone.note.4=1 A#
+fruitphone.note.5=1 B
+fruitphone.note.6=1 C
+fruitphone.note.7=1 C#
+fruitphone.note.8=1 D
+fruitphone.note.9=1 D#
+fruitphone.note.10=1 E
+fruitphone.note.11=1 F
+fruitphone.note.12=1/2 F#
+fruitphone.note.13=2 G
+fruitphone.note.14=2 G#
+fruitphone.note.15=2 A
+fruitphone.note.16=2 A#
+fruitphone.note.17=2 B
+fruitphone.note.18=2 C
+fruitphone.note.19=2 C#
+fruitphone.note.20=2 D
+fruitphone.note.21=2 D#
+fruitphone.note.22=2 E
+fruitphone.note.23=2 F
+fruitphone.note.24=2 F#
+
+fruitphone.note.instrument=Instrument: %s
+fruitphone.note.instrument.piano=Piano/Harp
+fruitphone.note.instrument.guitar=Bass Guitar
+fruitphone.note.instrument.snare=Snare Drum
+fruitphone.note.instrument.click=Click
+fruitphone.note.instrument.drum=Bass Drum
+
+fruitphone.beacon.range=Range: %sm
+fruitphone.beacon.primary=Primary: %s %s
+fruitphone.beacon.secondary=Secondary: %s %s
+fruitphone.beacon.none=None
 
 fruitphone.gui.snapToGuides=Snap to Guides
 fruitphone.gui.clampRegion=Clamp Region
