--- a/src/main/resources/assets/fruitphone/lang/en_US.lang
+++ b/src/main/resources/assets/fruitphone/lang/en_US.lang
@@ -3,7 +3,7 @@ itemGroup.fruitphone=Fruit Phone
 item.fruitphone.handheld.name=Fruit Pad
 item.fruitphone.handheld_mini.name=Fruit Phone
 item.fruitphone.passive.name=Fruit Glass
-item.fruitphone.passive)invisible.name=Fruit Contacts
+item.fruitphone.passive_invisible.name=Fruit Contacts
 item.fruitphone.passive.hint.0=Does not use your helmet slot.
 item.fruitphone.passive.hint.1=Right-click while holding to equip.
 item.fruitphone.remover.name=Power Drill
